--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,228 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: url('./gradient.png');
+  background-size: fill;
+  background-position: static;
+  background-repeat: repeat-y;
+}
+
+.resume {
+  background: none;
+  height: 100%;
+}
+
+.resume > img {
+  height: auto;
+  width: 90%;
+  overflow-y: hidden;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  width: 50%;
+  margin-top: 10%;
+
+}
+
+.contactForm {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.contactForm > #message {
+  height: 25vh;
+}
+
+.contactForm > input, #message, button {
+  padding: 5px;
+  margin: 10px;
+}
+
+button {
+  margin-top: 10px;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #a37cffad;
+  width: 100%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding: 0 100px 0 0 ;
+  height: 60px;
+  z-index: 999;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.header  {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  font-size: 10px;
+  width: 40%;
+  padding: 25px;
+  margin: 0 auto;
+}
+
+.hamburger-menu {
+  display: none;
+}
+
+a {
+  text-decoration: none;
+  font-style: normal;
+}
+
+.navbar-links {
+  display: flex;
+  padding: 10px;
+}
+
+a:hover {
+  text-decoration: overline;
+}
+
+.navbar-links div {
+  padding: 0 10% 0 10%;
+}
+
+.main-content {
+  display: flex;
+  padding: 10px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.circle-container {
+  position: relative;
+  margin-top: 8%;
+}
+
+.circle-image {
+  display: flex;
+  position: relative;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  overflow: hidden;
+  transition: 0.3s;
+}
+
+.circle-image.open {
+  width: 300px;
+  height: 300px;
+}
+
+.circle-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.social-links {
+  position: absolute;
+  top: 20%;
+  left: calc(-10%);
+  transform: translateX(-50%);
+  display: none;
+  justify-content: center;
+  z-index: 1;
+  flex-direction: row;
+}
+
+.social-links.open {
+  display: flex;
+}
+
+.social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px 5px; /* Adjust the spacing between links */
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #333;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.social-links a:hover {
+  background-color: #555;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 900px) {
+  .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: auto;
+    padding: 10px;
+    width: 99dvw;
+    contain: content;
   }
-  to {
-    transform: rotate(360deg);
+
+  .header {
+    font-size: 10px;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .hamburger-menu {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    padding-right: 10px;
+  }
+
+  .navbar-links {
+    display: none;
+    flex-direction: column;
+    margin-top: 10px;
+    padding-right: 10px;
+  }
+
+  .navbar-links.open {
+    display: flex;
+  }
+
+  .navbar-links div {
+    margin: 10px 0;
+    padding: 0;
+  }
+
+  .navbar-links div:first-child {
+    margin-top: 0;
+  }
+
+  .circle-container {
+    margin-top: 15%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .circle-image {
+    margin-bottom: 20px;
+    width: 250px;
+    height: 250px;
+  }
+
+  .social-links {
+    position: absolute;
+    display: flex;
+    justify-content: center;
   }
 }
