--- a/src/App.css
+++ b/src/App.css
@@ -235,6 +235,7 @@ color: white;
 
   .circle-image {
     margin-bottom: 10px;
+    margin-left: 5%;
     width: 250px;
     height: 250px;
   }
@@ -245,5 +246,9 @@ color: white;
     justify-content: center;
     top: 30%;
     left: calc(-9%);
+  }
+  .circle-image.open {
+    width: 240px;
+    height: 240px;
   }
 }
