--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
 body {
-  background-image: url('./gradient.png');
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: #f0eaff;
+}
+
+.tools-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color:white;
+  margin-top: 8%;
+  padding: 5% 0 5% 0;
+}
+
+.progress-container {
+  display: flex;
+  justify-content: space-between;
+  width: 60vw;
+  margin-top: 3%;
+}
+
+.column {
+  width: 35%;
+}
+
+.progress-item {
+  margin-bottom: 20px;
 }
 
 .App {
@@ -52,31 +74,42 @@ button {
   margin-top: 10px;
 }
 
+h2 {
+  font-size: 1.5rem;
+  width: 60%;
+  font-style: bold;
+}
+
+h3 {
+  font-size: 14px;
+}
+
 .navbar {
   position: fixed;
   left: 0;
   top: 0;
-  background-color: #a37cffad;
-  width: 100%;
-  color: white;
+  background-color: #c8b2ffad;
   display: flex;
   align-items: center;
-  justify-content: left;
   padding-left: 10px;
-  height: 60px;
-  z-index: 2;
-  overflow: hidden;
-
+  height: 7vh;
+  z-index:1;
 }
+
 
 .header  {
   display: flex;
+  font-family: Roboto;
   justify-content: center;
   align-self: center;
-  font-size: 10px;
-  width: 35%;
-  padding: 25px;
+  font-size: .8em;
+  width: 30%;
+  padding: 20px;
   margin: 0 auto;
+}
+
+.footer {
+  font-family: Roboto;
 }
 
 .hamburger-menu {
@@ -88,8 +121,14 @@ a {
   font-style: normal;
 }
 
+.navbar, h2, h3 {
+  font-family: Raleway;
+  font-weight: 400;
+}
+
 .navbar-links {
   display: flex;
+  width: 100vw;
 }
 .navbar-links a {
   color: rgb(82, 0, 159);
@@ -98,11 +137,13 @@ a {
 a:hover {
   text-decoration: overline;
   font-style: italic;
+  color: rgb(127, 0, 159)
 }
 
 .navbar-links div {
-  padding: 0 10% 0 0;
-  justify-items: space-between;
+  padding: 0 auto 0 0;
+  justify-items: space-evenly;
+  width: 100%;
 }
 
 .main-content {
@@ -129,10 +170,10 @@ a:hover {
   transition: 0.3s;
 }
 
-.circle-image.open {
-  width: 350px;
-  height: 350px;
-  box-shadow: rgb(169, 226, 255) 0px 0px 0px 3px, rgb(156, 255, 155) 0px 0px 0px 6px, rgb(255, 241, 170) 0px 0px 0px 9px, rgb(255, 190, 143) 0px 0px 0px 12px, rgb(255, 147, 228) 0px 0px 0px 15px;
+.circle-image:hover {
+  width: 390px;
+  height: 390px;
+  box-shadow: rgb(169, 226, 255, 0.2) 0px 0px 0px 3px, rgb(156, 255, 155, 0.2) 0px 0px 0px 6px, rgb(255, 241, 170, 0.2) 0px 0px 0px 9px, rgb(255, 190, 143, 0.2) 0px 0px 0px 12px, rgb(255, 147, 228, 0.2) 0px 0px 0px 15px;
 }
 
 .circle-image img {
@@ -142,36 +183,36 @@ a:hover {
 }
 
 .social-links {
+  display:flex;
   position: absolute;
-  top: 34%;
-  left: calc(-15%);
-  transform: translateX(-50%);
-  display: none;
+  left: 50%;
   justify-content: center;
-  z-index: 1;
-  flex-direction: row;
+  padding: 35px;
+  transform: translateX(-50%);
+  margin: 0 auto;
+
 }
 
-.social-links.open {
-  display: flex;
+.social-links a:not(:last-child) {
+  margin-right: 330px;
 }
 
 .social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 5px 5px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #333;
+  background-color: #515151;
   color: white;
 }
 
 .social-links a:hover {
-  background-color: #555;
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  background-color: #414141;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px outset;
 }
+
 
 button {
   background-color: rgb(194, 255, 193);
@@ -185,19 +226,18 @@ color: white;
 
 
 @media (max-width: 820px) {
-  .navbar {
+.navbar {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start; 
     height: auto;
-    padding: 10px;
-    width: 99dvw;
-    contain: content;
-  }
+    padding: 12px;
+    width: 100%;
+  } 
 
   .header {
-    font-size: 10px;
+    font-size: .66rem;
     width: 50%;
+    padding: 70px;
     margin: 0 auto;
   }
 
@@ -210,17 +250,17 @@ color: white;
 
   .navbar-links {
     display: none;
-    flex-direction: column;
-    margin-top: 10px;
+    /* margin-top: 10px; */
   }
 
   .navbar-links.open {
     display: flex;
+    flex-direction: row;
+    justify-content: left;
   }
 
   .navbar-links div {
-    margin: 5px 10px;
-    padding: 0;
+    margin: 0 10px;
   }
 
   .navbar-links div:first-child {
@@ -233,22 +273,35 @@ color: white;
     justify-content: center;
   }
 
+  h2 {
+    font-size: 1.2rem;
+  }
+
   .circle-image {
     margin-bottom: 10px;
     margin-left: 5%;
-    width: 250px;
-    height: 250px;
+    width: 280px;
+    height: 280px;
   }
 
   .social-links {
     display:flex;
     position: absolute;
+    top: 100%;
     justify-content: center;
-    top: 30%;
-    left: calc(-9%);
+    padding-bottom: 25px;
   }
-  .circle-image.open {
-    width: 240px;
-    height: 240px;
+
+  .footer {
+    padding: 5%;
+  }
+
+  .social-links a:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  .circle-image:hover {
+    width: 270px;
+    height: 270px;
   }
 }
