--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@ body {
 }
 
 .tools-container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   background-color:white;
+  display: flex;
+  flex-direction: column;
   margin-top: 8%;
   padding: 5% 0 5% 0;
 }
@@ -14,8 +14,8 @@ body {
 .progress-container {
   display: flex;
   justify-content: space-between;
-  width: 60vw;
   margin-top: 3%;
+  width: 60vw;
 }
 
 .column {
@@ -27,10 +27,10 @@ body {
 }
 
 .App {
-  text-align: center;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  text-align: center;
 }
 
 .resume {
@@ -40,8 +40,12 @@ body {
 
 .resume > img {
   height: auto;
-  width: 90%;
   overflow-y: hidden;
+  width: 90%;
+}
+
+.qrcode {
+  padding: 10px;
 }
 
 .contact {
@@ -49,16 +53,17 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
-  width: 50%;
-  margin-top: 10%;
+  width: 80%;
+  padding-bottom: 5%;
 
 }
 
 .contactForm {
-  width: 100%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .contactForm > #message {
@@ -66,48 +71,49 @@ body {
 }
 
 .contactForm > input, #message, button {
-  padding: 5px;
   margin: 10px;
-}
-
-button {
-  margin-top: 10px;
+  padding: 5px;
 }
 
 h2 {
   font-size: 1.5rem;
-  width: 60%;
   font-style: bold;
+  width: 60%;
 }
 
 h3 {
   font-size: 14px;
 }
-
+.contacth2 {
+  display:flex;
+  font-size: 1.5rem;
+  justify-content: left;
+  margin: 0 auto;
+  padding: 3%;
+}
 .navbar {
-  position: fixed;
-  left: 0;
-  top: 0;
+  align-items: center;
   background-color: #c8b2ffad;
   display: flex;
-  align-items: center;
-  padding-left: 10px;
   height: 7vh;
+  left: 0;
+  padding-left: 10px;
+  position: fixed;
+  top: 0;
   z-index:1;
 }
 
-
 .header  {
+  align-self: center;
   display: flex;
   font-family: Roboto;
-  justify-content: center;
-  align-self: center;
   font-size: .8em;
-  width: 50%;
-  text-justify: distribute;
+  justify-content: center;
+  margin: 0 auto;
   padding: 20px;
   padding-top: 5%;
-  margin: 0 auto;
+  text-justify: distribute;
+  width: 50%;
 }
 
 .footer {
@@ -119,8 +125,8 @@ h3 {
 }
 
 a {
-  text-decoration: none;
   font-style: normal;
+  text-decoration: none;
 }
 
 .navbar, h2, h3 {
@@ -137,62 +143,62 @@ a {
 }
 
 a:hover {
-  text-decoration: overline;
   font-style: italic;
+  text-decoration: overline;
+
   color: rgb(127, 0, 159)
 }
 
 .navbar-links div {
-  padding: 0 auto 0 0;
   justify-items: space-evenly;
+  padding: 0 auto 0 0;
   width: 100%;
 }
 
 .main-content {
-  display: flex;
-  padding: 10px;
   align-items: center;
+  display: flex;
   justify-content: center;
+  padding: 10px;
 }
 
 .circle-container {
-  position: relative;
   margin-top: 6%;
+  position: relative;
 }
 
 .circle-image {
-  display: flex;
   border: 2px #000 groove;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-  position: relative;
-  width: 400px;
-  height: 400px;
   border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  display: flex;
+  height: 400px;
   overflow: hidden;
+  position: relative;
   transition: 0.3s;
+  width: 400px;
 }
 
 .circle-image:hover {
-  width: 390px;
-  height: 390px;
   box-shadow: rgb(169, 226, 255, 0.2) 0px 0px 0px 3px, rgb(156, 255, 155, 0.2) 0px 0px 0px 6px, rgb(255, 241, 170, 0.2) 0px 0px 0px 9px, rgb(255, 190, 143, 0.2) 0px 0px 0px 12px, rgb(255, 147, 228, 0.2) 0px 0px 0px 15px;
+  height: 390px;
+  width: 390px;
 }
 
 .circle-image img {
-  width: 100%;
   height: 100%;
   object-fit: cover;
+  width: 100%;
 }
 
 .social-links {
   display:flex;
-  position: absolute;
-  left: 50%;
   justify-content: center;
-  padding: 35px;
-  transform: translateX(-50%);
+  left: 50%;
   margin: 0 auto;
-
+  padding: 35px;
+  position: absolute;
+  transform: translateX(-50%);
 }
 
 .social-links a:not(:last-child) {
@@ -200,59 +206,96 @@ a:hover {
 }
 
 .social-links a {
-  display: flex;
   align-items: center;
+  background-color: #515151;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  height: 40px;
   justify-content: center;
   width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #515151;
+}
+
+button {
+  align-items: center;
+  background-color: #929292;
+  border-radius: 5%;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   color: white;
+  display: flex;
+  font-family: 'Arial';
+  font-size:100%;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 10px;
+  width: 60%;
 }
 
 .social-links a:hover {
-  background-color: #414141;
   box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px outset;
 }
 
+.social-links a:hover, button:hover {
+  background-color: #929292;
+  color: white;
+}
 
-button {
+.qr {
+  display: flex;
+  height: 250px;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 10%;
+  width: 250px;
+}
+
+.contacth2 {
+  font-size: 1.3em;
+}
+
+button:hover {
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+/* button {
   background-color: rgb(194, 255, 193);
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 button:hover {
+box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 color: white;
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
+} */
 
+@media (max-width: 768px) {
 
-@media (max-width: 820px) {
 .navbar {
     display: flex;
-    justify-content: flex-start; 
     height: auto;
+    justify-content: flex-start;
     padding: 12px;
     width: 100%;
   } 
 
   .header {
     font-size: .66rem;
-    width: 50%;
-    padding: 70px;
     margin: 0 auto;
+    padding: 70px;
+    width: 50%;
   }
 
   .hamburger-menu {
-    display: flex;
     align-items: center;
+    display: flex;
     margin-right: 20px;
     padding-right: 10px;
   }
 
   .navbar-links {
     display: none;
-    /* margin-top: 10px; */
+    margin-top: 10px;
+
+    /*  */
   }
 
   .navbar-links.open {
@@ -270,40 +313,54 @@ color: white;
   }
 
   .circle-container {
-    margin-top: 20%;
     align-items: center;
     justify-content: center;
+    margin-top: 20%;
   }
-
   h2 {
-    font-size: 1.2rem;
+    display: flex;
+    font-size: 1.19rem;
+    justify-content: center;
+    margin: 0 auto;
+
   }
 
+  .contacth2 {
+    margin-top: 12%;
+  }
   .circle-image {
+    height: 280px;
     margin-bottom: 10px;
     margin-left: 5%;
     width: 280px;
-    height: 280px;
   }
 
   .social-links {
     display:flex;
-    position: absolute;
-    top: 100%;
     justify-content: center;
     padding-bottom: 25px;
+    position: absolute;
+    top: 100%;
   }
 
   .footer {
     padding: 5%;
   }
 
+  .qr {
+    display: none;
+  }
+
+  /* .contacth2 {
+    margin-top: 12%;
+  } */
+
   .social-links a:not(:last-child) {
     margin-right: 10px;
   }
 
   .circle-image:hover {
-    width: 270px;
     height: 270px;
+    width: 270px;
   }
 }
