hopefully final fixes...

--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,7 @@ a:hover {
   padding: 35px;
   position: absolute;
   transform: translateX(-50%);
+  margin-top:5%;
 }
 
 .social-links a:not(:last-child) {
