--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,6 @@ body {
   width: 35%;
 }
 
-.progress-item {
-  margin-bottom: 20px;
-}
 
 .App {
   display: flex;
@@ -130,6 +127,8 @@ h3 {
   font-family: Roboto;
   font-size: 12px;
   padding: 10px;
+  bottom: 0;
+  position:calc(100vh - 1px);
 }
 .footerCon {
   bottom: 0;
@@ -207,11 +206,13 @@ a:hover {
 }
 
 .circle-image:hover {
-  box-shadow: rgb(169, 226, 255, 0.2) 0px 0px 0px 3px,
-    rgb(156, 255, 155, 0.2) 0px 0px 0px 6px,
-    rgb(255, 241, 170, 0.2) 0px 0px 0px 9px,
-    rgb(255, 190, 143, 0.2) 0px 0px 0px 12px,
-    rgb(255, 147, 228, 0.2) 0px 0px 0px 15px;
+  box-shadow: rgba(174, 194, 255, 0.4) 0px 0px 0px 3px,
+    rgba(194, 255, 248, 0.4) 0px 0px 0px 6px,
+    rgba(211, 255, 210, 0.4) 0px 0px 0px 9px,
+    rgba(255, 247, 183, 0.4) 0px 0px 0px 12px,
+    rgba(255, 202, 242, 0.4) 0px 0px 0px 15px,  rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
   height: 390px;
   width: 390px;
 }
