--- a/src/App.css
+++ b/src/App.css
@@ -1,378 +1,397 @@
-body {
-  background-color: #f0eaff;
-  height: 100%;
+body
+{
+	background-color: #f0eaff;
+	height: 100%;
+	overflow-x: hidden;
 }
-
-.tools-container {
-  align-items: center;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  margin-top: 8%;
-  padding: 8% 0 5% 0;
-  border-top: 1.25px solid #000;
+.tools-container
+{
+	align-items: center;
+	background-color: white;
+	border-top: 1.25px solid #000;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-top: 7%;
+	padding: 9% 0 9% 0;
 }
-
-.progress-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 3%;
-  width: 60vw;
+.tools-container h2
+{
+	justify-content: center;
+	margin-bottom: 5%;
 }
-
-.column {
-  width: 35%;
+.progress-container
+{
+	display: grid;
+	grid-auto-flow: column;
+	grid-column-gap: 50px;
+	grid-row-gap: 50px;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+	width: 100%;
 }
-
-
-.App {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  text-align: center;
+.App
+{
+	text-align: center;
 }
-
-.resume {
-  background: white;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  height: 100%;
-  width: 100%;
-  max-width: 100%;
-  margin-top: 24px;
-  position: fixed;
+.resume
+{
+	background: white;
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	margin: 0 auto;
+	margin-top: 24px;
+	max-width: 100%;
+	position: fixed;
+	width: 100%;
 }
-
-.qrcode {
-  padding: 10px;
+.qrcode
+{
+	padding: 10px;
 }
-
-.contact {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  position: ab;
-  width: 80%;
-  margin-bottom: 5%;
+.contact
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0 auto;
+	margin-bottom: 10%;
+	width: 80%;
 }
-
-.contactForm {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  width: 80%;
+.contactForm
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0 auto;
+	width: 80%;
 }
-
-.contactForm > #message {
-  height: 25vh;
+.contactForm > #message
+{
+	height: 25vh;
 }
-
 .contactForm > input,
 #message,
-button {
-  margin: 10px;
-  padding: 5px;
-  border-radius: 3px;
-  font-family: Roboto;
+button
+{
+	border-radius: 3px;
+	font-family: Roboto;
+	margin: 10px;
+	padding: 5px;
 }
-
-h2 {
-  font-size: 1.5rem;
-  font-style: bold;
-  width: 60%;
+h2
+{
+	display: flex;
+	font-size: 1.5rem;
+	font-style: bold;
+	justify-content: center;
+	margin: 0 auto;
+	width: 60%;
 }
-
-h3 {
-  font-size: 14px;
+h3
+{
+	font-size: 14px;
 }
-.contacth2 {
-  display: flex;
-  font-size: 1.5rem;
-  justify-content: left;
-  margin: 0 auto;
-  padding: 3%;
+.contacth2
+{
+	display: flex;
+	font-size: 1.5rem;
+	justify-content: center;
+	margin: 0 auto;
+	padding: 3%;
 }
-.navbar {
-  align-items: center;
-  background-color: #c8b2ffad;
-  display: flex;
-  left: 0;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  padding: 15px;
+.navbar
+{
+	align-items: center;
+	background-color: #c8b2ffad;
+	display: flex;
+	left: 0;
+	padding: 15px;
+	position: fixed;
+	top: 0;
+	z-index: 1;
 }
-
-.header {
-  align-self: center;
-  display: flex;
-  font-family: Roboto;
-  font-size: 0.8em;
-  justify-content: center;
-  margin: 0 auto;
-  padding: 10px;
-  padding-top: 5%;
-  margin-top:7%;
-  text-justify: distribute;
-  width: 50%;
+.header
+{
+	align-self: center;
+	display: flex;
+	font-family: Roboto;
+	font-size: 0.8em;
+	justify-content: center;
+	margin: 0 auto;
+	margin-top: 7%;
+	padding: 10px;
+	padding-top: 5%;
+	text-justify: distribute;
+	width: 50%;
 }
-
-
-.footer {
-  width: 100%;
-  border-top: 1px solid #000000;
-  font-family: Roboto;
-  font-size: 12px;
-  padding: 10px;
+.footer
+{
+	border-top: 1px solid #000000;
+	font-family: Roboto;
+	font-size: 12px;
+	padding: 10px;
+	width: 100%;
 }
-.footerCon {
-  bottom: 0;
-  background-color: white;
-  width: 100%;
-  border-top: 1px solid #000000;
-  font-family: Roboto;
-  font-size: 12px;
-  padding: 10px;
-  margin-top: 2%;
+.footerCon
+{
+	background-color: white;
+	border-top: 1px solid #000000;
+	font-family: Roboto;
+	font-size: 12px;
+	margin-top: 5%;
+	padding: 10px;
+	width: 100%;
 }
-
-
-.hamburger-menu {
-  display: none;
+.hamburger-menu
+{
+	display: none;
 }
-
-a {
-  font-style: normal;
-  text-decoration: none;
+a
+{
+	font-style: normal;
+	text-decoration: none;
 }
-
 .navbar,
 h2,
-h3 {
-  font-family: Raleway;
-  font-weight: 400;
+h3
+{
+	font-family: Raleway;
+	font-weight: 400;
 }
-
-.navbar-links {
-  display: flex;
-  width: 100vw;
+.navbar-links
+{
+	display: flex;
+	width: 100vw;
 }
-.navbar-links a {
-  color: rgb(0, 0, 0);
+.navbar-links a
+{
+	color: rgb(0, 0, 0);
 }
-
-a:hover {
-  font-style: italic;
-  text-decoration: overline;
-
-  color: rgb(255, 255, 255);
+a:hover
+{
+	color: rgb(255, 255, 255);
+	font-style: italic;
+	text-decoration: overline;
 }
-
-.navbar-links div {
-  justify-items: space-evenly;
-  padding: 0 auto 0 0;
-  width: 100%;
+.navbar-links div
+{
+	justify-items: space-evenly;
+	padding: 0 auto 0 0;
+	width: 100%;
 }
-
-.main-content {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  padding: 10px;
+.main-content
+{
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	padding: 10px;
 }
-
-.circle-container {
-  margin-top: 10%;
-  position: relative;
+.circle-container
+{
+	margin-top: 10%;
+	position: relative;
 }
-
-.circle-image {
-  border: 2px #000 groove;
-  border-radius: 50%;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-  display: flex;
-  height: 400px;
-  overflow: hidden;
-  position: relative;
-  transition: 0.3s;
-  width: 400px;
+.circle-image
+{
+	border: 2px #000 groove;
+	border-radius: 50%;
+	box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+ rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+ rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+	display: flex;
+	height: 400px;
+	overflow: hidden;
+	position: relative;
+	transition: 0.3s;
+	width: 400px;
 }
-
-.circle-image:hover {
-  box-shadow: rgba(174, 194, 255, 0.4) 0px 0px 0px 3px,
-    rgba(194, 255, 248, 0.4) 0px 0px 0px 6px,
-    rgba(211, 255, 210, 0.4) 0px 0px 0px 9px,
-    rgba(255, 247, 183, 0.4) 0px 0px 0px 12px,
-    rgba(255, 202, 242, 0.4) 0px 0px 0px 15px,  rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-  height: 390px;
-  width: 390px;
+.circle-image:hover
+{
+	box-shadow: rgba(174, 194, 255, 0.4) 0px 0px 0px 3px,
+ rgba(194, 255, 248, 0.4) 0px 0px 0px 6px,
+ rgba(211, 255, 210, 0.4) 0px 0px 0px 9px,
+ rgba(255, 247, 183, 0.4) 0px 0px 0px 12px,
+ rgba(255, 202, 242, 0.4) 0px 0px 0px 15px, rgba(0, 0, 0, 0.07) 0px 1px 2px,
+ rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+ rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+ rgba(0, 0, 0, 0.07) 0px 32px 64px;
+	height: 390px;
+	width: 390px;
 }
-
-.circle-image img {
-  height: 100%;
-  object-fit: cover;
-  width: 100%;
+.circle-image img
+{
+	height: 100%;
+	object-fit: cover;
+	width: 100%;
 }
-
-.social-links {
-  display: flex;
-  justify-content: center;
-  left: 50%;
-  margin: 0 auto;
-  padding: 35px;
-  position: absolute;
-  transform: translateX(-50%);
-  margin-top:5%;
+.social-links
+{
+	display: flex;
+	justify-content: center;
+	left: 50%;
+	margin: 0 auto;
+	margin-top: 5%;
+	padding: 35px;
+	position: absolute;
+	transform: translateX(-50%);
 }
-
-.social-links a:not(:last-child) {
-  margin-right: 75px;
+.social-links a:not(:last-child)
+{
+	margin-right: 75px;
 }
-
-.social-links a {
-  align-items: center;
-  background-color: #515151;
-  border-radius: 50%;
-  color: white;
-  display: flex;
-  height: 40px;
-  justify-content: center;
-  width: 40px;
+.social-links a
+{
+	align-items: center;
+	background-color: #929292;
+	border-radius: 50%;
+	color: white;
+	display: flex;
+	height: 40px;
+	justify-content: center;
+	width: 40px;
 }
-
-button {
-  align-items: center;
-  background-color: #929292;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  color: white;
-  display: flex;
-  font-family: "Arial";
-  font-size: 100%;
-  justify-content: center;
-  margin: 0 auto;
-  margin-top: 10px;
-  width: 60%;
+button
+{
+	align-items: center;
+	background-color: #929292;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+ rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+	color: white;
+	display: flex;
+	font-family: "Arial";
+	font-size: 100%;
+	justify-content: center;
+	margin: 0 auto;
+	margin-top: 10px;
+	width: 60%;
 }
-
-.qr {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  margin-top: 10%;
-  width: 220px;
-  height: 250px;
+.qr
+{
+	display: flex;
+	height: 250px;
+	justify-content: center;
+	margin: 0 auto;
+	margin-top: 10%;
+	width: 220px;
 }
-
-.contacth2 {
-  font-size: 1.3em;
+button:hover,
+.social-links a:hover
+{
+	background-color: #929292;
+	box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+ rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+ rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+ rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+ rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+	color: white;
 }
-
-button:hover, .social-links a:hover {
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
-    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    background-color: #929292;
-    color: white;
-}
-
-@media (max-width: 768px) {
-  .navbar {
-    display: flex;
-    height: auto;
-    width: 100%;
-  }
-
-  .header {
-    font-size: 0.66rem;
-    margin: 0 auto;
-    padding: 70px;
-    width: 50%;
-  }
-
-  .hamburger-menu {
-    align-items: center;
-    display: flex;
-    margin-right: 20px;
-    padding-right: 10px;
-  }
-
-  .navbar-links {
-    display: none;
-  }
-
-  .navbar-links.open {
-    display: flex;
-    flex-direction: row;
-  }
-
-
-  .navbar-links div:first-child {
-    margin-top: 0;
-  }
-
-  .circle-container {
-    align-items: center;
-    justify-content: center;
-  }
-  h2 {
-    display: flex;
-    font-size: 1.19rem;
-    justify-content: center;
-    margin: 0 auto;
-  }
-
-  h1 {
-    margin-top: 9%;
-  }
-
-  .contacth2 {
-    margin-top: 12%;
-  }
-  .circle-image {
-    height: 280px;
-    margin-bottom: 10px;
-    margin-left: 5%;
-    width: 280px;
-  }
-
-  .social-links {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 25px;
-    position: absolute;
-    top: 100%;
-  }
-
-  .qr {
-    display: none;
-  }
-
-  .social-links a:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  .circle-image:hover {
-    height: 270px;
-    width: 270px;
-  }
-
-  .footer {
-    position: absolute;
-  }
-
-  .footerCon {
-    background-color: white;
-    border-top: 2px solid #000;
-    position: absolute;
-  }
+@media (max-width: 768px)
+{
+	.navbar
+	{
+		display: flex;
+		height: auto;
+		width: 100%;
+	}
+	.header
+	{
+		font-size: 0.66rem;
+		margin: 0 auto;
+		padding: 70px;
+		width: 50%;
+	}
+	.hamburger-menu
+	{
+		align-items: center;
+		display: flex;
+		margin-right: 20px;
+		padding-right: 10px;
+	}
+	.navbar-links
+	{
+		display: none;
+	}
+	.navbar-links.open
+	{
+		display: flex;
+		flex-direction: row;
+	}
+	.navbar-links div:first-child
+	{
+		margin-top: 0;
+	}
+	.circle-container
+	{
+		align-items: center;
+		justify-content: center;
+	}
+	h2
+	{
+		font-size: 1.19rem;
+	}
+	h1
+	{
+		margin-top: 9%;
+	}
+	.contacth2
+	{
+		margin-top: 12%;
+	}
+	.circle-image
+	{
+		height: 280px;
+		margin-bottom: 10px;
+		margin-left: 5%;
+		width: 280px;
+	}
+	.social-links
+	{
+		display: flex;
+		justify-content: center;
+		padding-bottom: 25px;
+		position: absolute;
+		top: 100%;
+	}
+	.qr
+	{
+		display: none;
+	}
+	.social-links a:not(:last-child)
+	{
+		margin-right: 10px;
+	}
+	.circle-image:hover
+	{
+		height: 270px;
+		width: 270px;
+	}
+	.footer
+	{
+		position: absolute;
+	}
+	.footerCon
+	{
+		background-color: white;
+		border-top: 2px solid #000;
+		position: absolute;
+	}
+	.progress-container
+	{
+		grid-auto-flow: column;
+		grid-column-gap: 5px;
+		grid-row-gap: 5px;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+		margin: auto;
+		margin-left: auto;
+		margin-right: auto;
+		overflow: visible;
+		padding: 5% 0 8% 0;
+	}
+	.tools-container h2
+	{
+		padding-top: 8%;
+	}
 }
