--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   justify-content: center;
   padding: 6.5% 0 12% 0;
   min-width: 100vw;
+
 }
 .tools-container h2 {
   justify-content: center;
@@ -24,7 +25,7 @@ body {
   grid-row-gap: 50px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  width: 100%;
+  /* width: 80vw; */
 }
 .App {
   text-align: center;
@@ -317,6 +318,7 @@ button:hover,
     padding: 70px;
     padding-bottom: 10%;
     padding-top: 13%;
+    margin-top: 4%;
     justify-content: center;
     max-width: 80%;
   }
