--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
-
+* {
+  box-sizing: border-box;
+}
 
 body {
   background-color: #f0eaff;
   height: 100%;
+  width: 100%;
 }
 .tools-container {
   align-items: center;
@@ -13,6 +16,7 @@ body {
   justify-content: center;
   width: 100%;
   padding-bottom: 13%;
+  padding-top: 1.5%;
 
 }
 .tools-container h2 {
@@ -111,8 +115,9 @@ h3 {
   font-family: Roboto;
   display: flex;
   justify-content: center;
-  margin-top: 9%;
-  padding-top: 7%;
+  margin: auto;
+  margin-top: 5.5%;
+  padding-top: 8%;
   padding-bottom: 5%;
 }
 
@@ -184,7 +189,7 @@ a {
   font-style: normal;
   text-decoration: none;
 }
-.navbar,
+
 h2,
 h3 {
   font-family: Raleway;
@@ -197,6 +202,7 @@ h3 {
 .navbar-link {
   color: rgb(0, 0, 0);
   font-size: 1.15rem;
+  font-style: bold;
   padding-right: 10px;
 }
 
@@ -219,7 +225,7 @@ h3 {
   padding: 10px;
 }
 .circle-container {
-  margin-top: 10%;
+  margin-top: 7%;
   max-width: 100%;
 }
 .circle-image {
@@ -258,13 +264,14 @@ h3 {
   justify-content: center;
   left: 50%;
   margin: 0 auto;
-  margin-top: 5%;
+  margin-top: 3%;
   padding: 35px;
   position: absolute;
   transform: translateX(-50%);
+  width: 100%;
 }
 .social-links a:not(:last-child) {
-  margin-right: 75px;
+  margin-right: 60px;
 }
 .social-links a {
   align-items: center;
@@ -272,9 +279,9 @@ h3 {
   border-radius: 50%;
   color: white;
   display: flex;
-  height: 40px;
+  height: 50px;
   justify-content: center;
-  width: 40px;
+  width: 50px;
 }
 button {
   align-items: center;
@@ -322,11 +329,11 @@ button:hover,
   .header {
     font-size: 1.4rem;
     margin: 0 auto;
-    margin-top: 6%; 
+    margin-top: 2%; 
     justify-content: center;
     padding: 50px;
     padding-bottom: 10%;
-    padding-top: 10%;
+    padding-top: 8%;
   }
   .hamburger-menu {
     display: flex;
@@ -339,9 +346,6 @@ button:hover,
   .navbar-links.open {
     display: flex;
     flex-direction: row;
-  }
-  .navbar-link {
-    font-size: 15px;
   }
   .navbar-links div:first-child {
     margin-top: 0;
